--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.6'
+    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'org.mindrot:jbcrypt:0.4'
 }
 
 application {
